--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 body {
   background-color: lightgrey;
 }
-.envelope {
-  width: 95%;
-  padding: 5px;
+
+#region {
+  border: 1px solid black;
+}
+
+#json-preview {
+  width: 100%;
+  height: 205px;
+}
+
+#json-preview-container {
+  display:none;
 }
